feat: Added PnResponseEntityExceptionHandlerActivation (ex handler of SEND) (#728)
* fix 400 Bad request

* Added junit test for handleServerWebInputException

* fix 400 Bad request

* fix sonar issues

---------

Co-authored-by: federica.moschese <federica.moschese@emeal.nttdata.com>